2.4.0
- Removed ads

2.3.2
- Add preview arrow to results on fetched pages.

2.3.1
- Shows a welcome message with choice to disable ads on install.

2.3.0
- Background color showing result of ping now configurable.
- Ping now works on all input elements and not only those of type url.
- New option to show color picker on input elements of type color.

2.2.0
- Ping check on input urls.

2.1.0
- Different colors for each digit in page number.
- Video, image and left thumbs now loads.
- Progress indicator.